Using autolink on tweets and set overflow to hidden to avoid too large words

--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -342,5 +342,6 @@ div.gist {
 
 .twit {
     font-size:0.3em;
+    overflow:hidden;
 }
 
